test/compiler/invalid_programs/modules/ambiguous_import.jm
#!AmbiguityError

def foo()
end

module mod1
  def foo()
  end

  module mod2
    import foo
  end
end
